--- a/src/style/_v2.scss
+++ b/src/style/_v2.scss
@@ -31,6 +31,14 @@
       line-height: var(--line-height, initial);
       padding-bottom: var(--line-padding, 0);
       min-height: var(--line-height, initial);
+
+      strong {
+        font-weight: bold;
+      }
+
+      em {
+        font-style: italic;
+      }
     }
 
     .gutter {
